[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/projectile/Player/X/Weapons/spr_proj_player_shield.png" type="Texture" id=1]
[ext_resource path="res://nodes/entity/ProjectileBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/entity/Projectile/Player/X/Weapons/proj_rolling_shield_charged.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28, 28 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 88, 0, 44, 44 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28, 28 )

[node name="Area2D" instance=ExtResource( 2 )]
collision_mask = 128
script = ExtResource( 3 )
projectile_speed = 0
piercing = true

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 4 )

[node name="AnimatedSprite" parent="." index="1"]
modulate = Color( 0.788235, 0.788235, 1, 0.627451 )
scale = Vector2( 1.75, 1.75 )
frames = SubResource( 2 )

[node name="Hitbox" parent="." index="4"]
collision_layer = 16
collision_mask = 4
damage = 12

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="." index="5"]
process_mode = 0
wait_time = 0.5

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_Area2D_tree_exiting"]

[editable path="Hitbox"]
